esl/card_recognizer_dram_hls/solution1/.autopilot/db/card_recognizer_dram_hls.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:1323:7: warning: Added loop label VITIS_LOOP_1211_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1211_1: 
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:1323:7: note: FIX-IT applied suggested code changes
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2297:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2297:5: note: FIX-IT applied suggested code changes
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2311:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2311:5: note: FIX-IT applied suggested code changes
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2325:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:2325:5: note: FIX-IT applied suggested code changes
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:3936:7: warning: Added loop label VITIS_LOOP_1245_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1245_1: 
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:3936:7: note: FIX-IT applied suggested code changes
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:5985:66: error: ram_2p is not valid value for option interface BRAM's option 'storage_type' [clang-diagnostic-error]
#pragma HLS INTERFACE mode=ap_memory port=input_rgb storage_type=ram_2p latency=1
                                                                 ^
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:5995:45: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=gray type=ram_2p impl=bram
                                            ^
C:\Users\astan\Desktop\moj_esl\esl\esl\card_recognizer_dram_hls\solution1\.autopilot\db\card_recognizer_dram_hls.pp.0.cpp:5996:47: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=binary type=ram_2p impl=bram
                                              ^
